--- a/index.css
+++ b/index.css
@@ -23,10 +23,8 @@ h2{
     justify-content: center;
     padding-bottom: 20px;
     box-shadow: 10px blue;
-    justify-content: center;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    margin-top: 20px;
+    justify-items: center;
+    justify-content:end;
 }
 .income-container{
     border: 10px solid blue;
