--- a/index.css
+++ b/index.css
@@ -26,19 +26,28 @@ h2{
     justify-items: center;
     justify-content:end;
 }
-.income-container{
-    border: 10px solid blue;
+.income-cont{
+    border-style:;
     padding-right: 20px;
     align-items: center;
     justify-content: center;
     padding-bottom: 20px;
     margin-top: 20px;
 }
-.income-container{
+.income-cont{
     border-right:1px 
     
 
 }
-.income-container{
-    padding-left: 20px;
+.income-cont{
+    padding-left: 30px;
+}
+#income{
+    color: blue;
+    font-weight: bold;
+}
+#expense{
+    color: red;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
