--- a/index.css
+++ b/index.css
@@ -25,6 +25,9 @@ h2{
     box-shadow: 10px blue;
     justify-items: center;
     justify-content:end;
+    align-content: center;
+    text-align:center;
+    
 }
 .income-cont{
     border-style:;
@@ -40,14 +43,16 @@ h2{
 
 }
 .income-cont{
-    padding-left: 30px;
+    padding-left: 40px;
 }
 #income{
     color: blue;
     font-weight: bold;
+    text-align: center;
 }
 #expense{
     color: red;
     font-weight: bold;
     margin-bottom: 15px;
+    text-align: center;
 }
