--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-:root{
-    --drop-shadow: 0px 1px 4px 1px rgba(199,199,199,1);
-}
+
 body{
     font-family: sans-serif;
     display: flex;
@@ -30,7 +28,6 @@ h2{
     
 }
 .income-cont{
-    border-style:;
     padding-right: 20px;
     align-items: center;
     justify-content: center;
@@ -55,4 +52,16 @@ h2{
     font-weight: bold;
     margin-bottom: 15px;
     text-align: center;
+}
+#transaction{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+#transaction li{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    box-shadow: 5px grey;
 }
