--- a/index.css
+++ b/index.css
@@ -64,6 +64,10 @@ h2{
     justify-content: space-between;
     margin-bottom: 10px;
     box-decoration-break: slice;
+    border:20px solid;
+    box-shadow: 20px;
+    background-color: whitesmoke;
+    box-shadow: 10px;
 }
 #h2{
     text-align: center;
