--- a/index.css
+++ b/index.css
@@ -68,8 +68,21 @@ h2{
     box-shadow: 20px;
     background-color: whitesmoke;
     box-shadow: 10px;
+    padding-right: 1px;
 }
 #h2{
     text-align: center;
 }
-
+#transaction li button{
+    padding-left: 3px;
+    font-weight: bold;
+}
+#transaction li.income-amnt{
+    display: inline-block;
+    color:blue;
+}
+transaction li button :hover{
+    background-color: red;
+    border-radius: 10px;
+    color: red;
+}
