--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body{
 }
 .balance-container #balance{
     font-size: center;
+    padding-right: 20px;
 }
 h2{
     text-transform: uppercase;
@@ -25,6 +26,7 @@ h2{
     justify-content:end;
     align-content: center;
     text-align:center;
+    padding-right: 30px;
     
 }
 .income-cont{
@@ -63,11 +65,10 @@ h2{
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 10px;
-    box-decoration-break: slice;
-    border:20px solid;
+    border:40px 30px solid;
     box-shadow: 20px;
     background-color: whitesmoke;
-    box-shadow: 10px;
+    box-shadow: 50px;
     padding-right: 1px;
 }
 #h2{
@@ -80,6 +81,7 @@ h2{
 #transaction li.income-amnt{
     display: inline-block;
     color:blue;
+    padding-left: 10px;
 }
 transaction li button :hover{
     background-color: red;
