feat(styles): contributes to aligning the form with its right properties of height and width

--- a/index.css
+++ b/index.css
@@ -91,14 +91,14 @@ transaction li button :hover{
 .form-container form{
     display: flex;
     flex-direction: column;
+    width: 290px;
 
 }
 #form-container labels{
     padding-bottom: 10px;
 
 }
-#names{
-    height: 25px;
+#names, #amount{
+    height: 10px;
     margin-bottom: 10px;
-    
 }
