--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body{
 .balance-container #balance{
     font-size: center;
     padding-right: 20px;
+    padding-top: 20px;
 }
 h2{
     text-transform: uppercase;
@@ -20,7 +21,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 20px;
+    padding-bottom: 3x;
     box-shadow: 10px blue;
     justify-items: center;
     justify-content:end;
@@ -67,7 +68,7 @@ h2{
     margin-bottom: 10px;
     border:40px 30px solid;
     box-shadow: 20px;
-    background-color: whitesmoke;
+    background-color: blue;
     box-shadow: 50px;
     padding-right: 1px;
 }
@@ -80,13 +81,12 @@ h2{
 }
 #transaction li.income-amnt{
     display: inline-block;
-    font-display: blue;
+    background-color: blue;
     padding-left: 10px;
 }
-transaction li button :hover{
+transaction li button {
     background-color: red;
     border-radius: 10px;
-    color: red;
 }
 .form-container form{
     display: flex;
