--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@ body{
 .balance-container #balance{
     font-size: center;
     padding-right: 20px;
-    padding-top: 20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 h2{
     text-transform: uppercase;
@@ -21,7 +22,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 3x;
+    padding-top: 30px;
     box-shadow: 10px blue;
     justify-items: center;
     justify-content:end;
@@ -92,7 +93,9 @@ transaction li button {
     display: flex;
     flex-direction: column;
     width: 290px;
-
+}
+.form-container h2{
+    padding-left: 10px;
 }
 #form-container labels{
     padding-bottom: 10px;
