--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color:limegreen;
 }
 .web-app h1{
     text-align: center;
@@ -23,7 +24,7 @@ h2{
     align-items: center;
     justify-content: center;
     padding-top: 30px;
-    box-shadow: 10px blue;
+    box-shadow: 10px indigo;
     justify-items: center;
     justify-content:end;
     align-content: center;
@@ -47,7 +48,7 @@ h2{
     padding-left: 40px;
 }
 #income{
-    color: blue;
+    color: indigo;
     font-weight: bold;
     text-align: center;
 }
@@ -69,7 +70,7 @@ h2{
     margin-bottom: 10px;
     border:40px 30px solid;
     box-shadow: 20px;
-    background-color: blue;
+    background-color: indigo;
     box-shadow: 50px;
     padding-right: 1px;
 }
@@ -82,7 +83,7 @@ h2{
 }
 #transaction li.income-amnt{
     display: inline-block;
-    background-color: blue;
+    background-color: indigo;
     padding-left: 10px;
 }
 transaction li button {
@@ -121,7 +122,7 @@ transaction li button {
     justify-content: center;
 }
 #incomeBtn{
-    background-color: blue;
+    background-color: indigo;
     border-radius: 10px;
     width: 50%;
     margin-top: 15px;
