--- a/index.css
+++ b/index.css
@@ -1,128 +1,149 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-body{
-    font-family: sans-serif;
+:root {
+    --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #f7f7f7;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color:yellowgreen;
+    justify-content: center;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
 }
-.web-app h1{
-    text-align: center;
-    
+
+.container {
+    margin: 30px auto;
+    width: 350px;
 }
-.balance-container #balance{
-    font-size: center;
-    padding-right: 20px;
-    
+
+h1 {
+    letter-spacing: 1px;
+    margin: 0;
 }
-h2{
+
+h3 {
+    border-bottom: 1px solid #bbb;
+    padding-bottom: 10px;
+    margin: 40px 0 10px;
+}
+
+h4 {
+    margin: 0;
     text-transform: uppercase;
 }
-.cash-cont{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 30px;
-    box-shadow: 10px darkblue;
-    justify-items: center;
-    justify-content:end;
-    align-content: center;
-    text-align:center;
-    padding-right: 30px;
-    
-}
-.income-cont{
-    padding-right: 20px;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 20px;
-    margin-top: 20px;
-}
-.income-cont{
-    border-right:1px 
 
-}
-.income-cont{
-    padding-left: 40px;
-}
-#income{
-    color: darkblue;
-    font-weight: bold;
-    text-align: center;
-}
-#expense{
-    color: red;
-    font-weight: bold;
-    margin-bottom: 15px;
-    text-align: center;
-}
-#transaction{
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-#transaction li{
+.inc-exp-cont {
+    background-color: #fff;
+    box-shadow: var(--box-shadow);
+    padding: 20px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 10px;
-    border:40px 30px solid;
-    box-shadow: 20px;
-    color-scheme: #ffae42;
-    box-shadow: 50px;
-    padding-right: 1px;
+    margin: 20px 0;
 }
-#h2{
+
+.inc-exp-container>div {
+    flex: 1;
     text-align: center;
 }
-#transaction li button{
-    padding-left: 3px;
-    font-weight: bold;
-}
-#transaction li.income-amnt{
-    display: inline-block;
-    background-color: darkblue;
-    padding-left: 10px;
-}
-transaction li button {
-    background-color: red;
-    border-radius: 10px;
-}
-.form-container form{
-    display: flex;
-    flex-direction: column;
-    width: 290px;
-}
-.form-container h2{
-    padding-left: 10px;
-}
-#form-container labels{
-    padding-bottom: 10px;
 
+.inc-exp-container>div:first-of-type {
+    border-right: 1px solid #dedede;
 }
-#name, #amount{
-    height: 10px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    padding-top: 5px;
+
+.money {
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin: 5px 0;
 }
-.form-container form{
+
+.money.plus {
+    color: #2ecc71;
+}
+
+.money.minus {
+    color: #2ecc71;
+}
+
+label {
+    display: inline-block;
+    margin: 10px 0;
+}
+
+input[type='text'],
+input[type='number'] {
+    border: 1px solid #dedede;
+    border-radius: 2px;
+    display: block;
+    font-size: 16px;
     padding: 10px;
-    padding-top: 10px;
+    width: 100%;
 }
-#expenseBtn{
-    margin-top: 10px;
-    border-radius: 10px;
-    width: 50%;
-    margin-top: 15px;
+
+.btn {
+    cursor: pointer;
+    background-color: blue;
+    box-shadow: var(--box-shadow);
+    color: #fff;
+    border: 0;
+    display: block;
+    font-size: 16px;
+    margin: 10px 0 30px;
+    padding: 10px;
+    width: 100%;
+}
+
+.btn:focus,
+.delete-btn:focus {
+    outline: 0;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 40px;
+}
+
+.list li {
+    background-color: #fff;
+    box-shadow: var(--box-shadow);
+    color: blue;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.list li.plus {
+    border-right: 5px solid purple;
+}
+
+.list li.minus {
+    border-right: 5px solid red;
+}
+
+.delete-btn {
+    cursor: pointer;
     background-color: red;
-    align-items: center;
-    justify-content: center;
+    border: 0;
+    color: #fff;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 2px 5px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-100%, -50%);
+    opacity: 0;
 }
-#incomeBtn{
-    background-color:blue;
-    border-radius: 10px;
-    width: 50%;
-    margin-top: 15px;
+
+.list li:hover .delete-btn {
+    opacity: 1;
 }
